# DataRev

./: README.md  package-lock.json  sim_londrina.py  simulator.py
.github/workflows/: release.yml
src/: index.html  main.js  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
