[package]
name = "datarev"
version = "0.1.0"
description = "DataRev"
authors = ["you"]
edition = "2021"

[lib]
name = "datarev_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rumqttc = "0.24"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rfd        = "0.14"
serialport = "4"
chrono     = { version = "0.4", features = ["clock"], default-features = false }
